# trl-sft-grpo

./: .gitignore  README.md  READMY.md  eval.py  main.py  pyproject.toml  train_grpo.py  train_sft.py
